@@ -1139,30 +1139,6 @@ Returns:
     ``True`` if and only if the underlying 3-manifold is irreducible
     and Haken.)doc";
 
-// Docstring regina::python::doc::Triangulation_::recogniseHandlebody
-static const char *recogniseHandlebody =
-R"doc(Determines whether this is a triangulation of an orientable
-handlebody, and if so, which genus. Specifically, this routine returns
-the genus if this is indeed a handlebody, and returns -1 otherwise.
-This routine can be used on a triangulation with real boundary
-triangles, or on an ideal triangulation (in which case all ideal
-vertices will be assumed to be truncated).
-
-.. warning::
-    The algorithms used in this routine rely on normal surface theory
-    and so might be very slow for larger triangulations (although
-    faster tests are used where possible). The routine
-    knowsHandlebody() can be called to see if this property is already
-    known or if it happens to be very fast to calculate for this
-    triangulation.
-
-Returns:
-    the genus if this is a triangulation of an orientable handlebody,
-    or -1 otherwise.
-
-Author:
-    Alex He)doc";
-
 // Docstring regina::python::doc::Triangulation_::isIdeal
 static const char *isIdeal =
 R"doc(Determines if this triangulation is ideal. This is the case if and
@@ -1404,19 +1380,19 @@ Returns:
 // Docstring regina::python::doc::Triangulation_::knowsHandlebody
 static const char *knowsHandlebody =
 R"doc(Is it already known (or trivial to determine) whether or not this is a
-triangulation of an orientable handlebody? See isHandlebody() for
-further details.
+triangulation of an orientable handlebody? See recogniseHandlebody()
+for further details.
 
 If this property is indeed already known, future calls to
-isHandlebody() will be very fast (simply returning the precalculated
-value).
+recogniseHandlebody() will be very fast (simply returning the
+precalculated value).
 
 If this property is not already known, this routine will nevertheless
 run some very fast preliminary tests to see if the answer is obviously
 no. If so, it will store ``False`` as the precalculated value for
-isHandlebody() and this routine will return ``True``.
+recogniseHandlebody() and this routine will return ``True``.
 
-Otherwise a call to isHandlebody() may potentially require more
+Otherwise a call to recogniseHandlebody() may potentially require more
 significant work, and so this routine will return ``False``.
 
 .. warning::
@@ -2264,6 +2240,30 @@ Parameter ``tet``:
     the tetrahedron inside which the puncture will be taken. This may
     be ``None`` (the default), in which case the first tetrahedron
     will be used.)doc";
+
+// Docstring regina::python::doc::Triangulation_::recogniseHandlebody
+static const char *recogniseHandlebody =
+R"doc(Determines whether this is a triangulation of an orientable
+handlebody, and if so, which genus. Specifically, this routine returns
+the genus if this is indeed a handlebody, and returns -1 otherwise.
+This routine can be used on a triangulation with real boundary
+triangles, or on an ideal triangulation (in which case all ideal
+vertices will be assumed to be truncated).
+
+.. warning::
+    The algorithms used in this routine rely on normal surface theory
+    and so might be very slow for larger triangulations (although
+    faster tests are used where possible). The routine
+    knowsHandlebody() can be called to see if this property is already
+    known or if it happens to be very fast to calculate for this
+    triangulation.
+
+Returns:
+    the genus if this is a triangulation of an orientable handlebody,
+    or -1 otherwise.
+
+Author:
+    Alex He)doc";
 
 // Docstring regina::python::doc::Triangulation_::recogniser
 static const char *recogniser =
